@@ -36,6 +36,12 @@ yes
 Zs = [a-1,b-2,c-3]
 yes
 
+| ?- Xsss = [[[1,2,3],[4]],[[5]]], meta::map(meta::map(meta::map(\X^Y^(Y is X+3))), Xsss,  Ysss).
+
+Xsss = [[[1,2,3],[4]],[[5]]]
+Ysss = [[[4,5,6],[7]],[[8]]]
+yes
+
 
 % examples on symplifying setof/3 and similar predicates usage:
 
